client/css/main.css
/* ... */
	main {
		background: #eee;
	}

	main .block {
		background: #fff;
		box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
	}

	main section.section {
		display: none;
		padding: calc(var(--gap) * 2);
	}
	main section.section.show {
		display: block;
	}
		main section .toolbar {
			display: grid;
			grid-gap: calc(var(--gap) * 2);
			grid-auto-columns: max-content;
			padding: calc(var(--gap) * 2) 0;
			grid-template-columns: repeat(auto-fit, minmax(75px, max-content));
		}
			main .toolbar button {
				white-space: nowrap;
				overflow: hidden;
				text-overflow: ellipsis;
			}
			main section .export-form {
				background: #fff;
				box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
				padding: 10px;
				margin-top: calc(var(--gap) * 2);
				user-select: text;
				font-family: monospace;
				max-height: 150px;
				overflow: auto;
			}

	main .loading {
		margin-top: 100px;
		height: 70px;
		background-size: contain;
	}

	main .dialog-box .body ul.user-list {
		list-style-type: none;
		padding: 0px;
		display: grid;
		grid-gap: calc(var(--gap) * 2);
		grid-template-columns: 1fr 1fr 1fr;
		margin: calc(var(--gap) * 2);
	}

		main .dialog-box .body ul.user-list li {
			display: flex;
			flex-direction: column;
		}

			main .dialog-box .body ul.user-list li a {
				color: #333;
				font-size: 110%;
				width: fit-content;
			}
			main .dialog-box .body ul.user-list li span {
				color: #999;
				font-size: 90%;
				margin-top: var(--gap);
			}

	main .section > h1,
	main .section > h2 {
		border-bottom: 1px dashed #999;
		margin: 0;
		font-size: 130%;
		text-transform: capitalize;
		padding: 2px 0;
	}

	main table {
		border-collapse: collapse;
		width: 100%;
	}
		main table thead {
			background: var(--color-primary);
			color: var(--color-primary-text);
			font-size: 90%;
		}
			main table thead tr th {
				padding: 5px 8px;
				top: 0px;
				z-index: 2;
				font-weight: normal;
				background: var(--color-primary);
				color: var(--color-primary-text);
			}
			main table thead th:last-child {
				border-right: 0;
			}
				main table thead .sort svg {
					float: right;
					margin: 2px 0 0 var(--gap);
					display: block;
					font-size: 80% !important;
					cursor: pointer;
					opacity: 0;
					transition: opacity var(--transition-duration);
				}
				main table thead th:hover .sort svg {
					opacity: 1;
				}
		main table tbody tr {
			transition: var(--transition-duration);
		}
		main table tbody tr:nth-child(2n) {
			 background: #efefef;
		}
		main table:not(.static) tbody tr:hover {
			background: var(--color-hover);
			color: var(--color-hover-text);
		}
		main table tbody tr.selected {
			background: var(--color-selected);
			color: var(--color-selected-text);
		}
			main table td {
				padding: 8px;
				position: relative;
			}
				main table .thin,
				main table .action {
					width: 80px;
					text-align: center;
				}
				main table tbody th.action,
				main table td.action {
					cursor: pointer;
					transition: background var(--transition-duration),
								box-shadow var(--transition-duration);
				}
				main table tbody th.action.green:not(.NA):hover,
				main table td.action.green:not(.NA):hover {
					background: #5b5;
				}
				main table tbody th.action.red:not(.NA):hover,
				main table td.action.red:not(.NA):hover {
					background: #e77;
				}
				main table tbody th.action:active,
				main table td.action:active {
					box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.25);
				}
				main table tbody th.action:not(.NA):hover,
				main table td.action:not(.NA):hover {
					background: var(--color-accent);
					color: var(--color-accent-text);
					cursor: pointer;
				}

	.form {
		display: grid;
		padding: calc(var(--gap) * 2);
		grid-gap: calc(var(--gap) * 3);
	}
		.form label {
			display: grid;
			grid-gap: var(--gap);
			max-width: 200px;
			white-space: nowrap;
		}
			.form label > span {
				font-size: 90%;
				color: #444;
				font-weight: bold;
			}

.dialog-box-blanket {
	background: rgba(0, 0, 0, 0.6);
	position: fixed;
	bottom: 0;
	right: 0;
	top: 0;
	left: 0;
	z-index: 10;
	display: flex;
	align-items: center;
	justify-content: center;
}
	.dialog-box {
		background: #fff;
		box-shadow: 0 0 100px rgba(0, 0, 0, 0.5);
		position: fixed;
		max-height: 80%;
		width: 40%;
		align-self: center;
		justify-self: center;
		overflow: auto;
	}
		.dialog-box > header {
			display: flex;
			background: var(--color-secondary);
			color: #fff;
			position: sticky;
			top: 0;
			justify-content: space-between;
			z-index: 2;
		}
			.dialog-box header h3 {
				margin: calc(var(--gap) * 2);
				font-weight: normal;
				font-size: 100%;
			}
			.dialog-box header span.close {
				cursor: pointer;
				padding: 5px calc(var(--gap) * 2);
				display: flex;
				align-items: center;
				transition: box-shadow var(--transition-duration),
							background var(--transition-duration);
			}
			.dialog-box header span.close:hover {
				background: rgba(255, 255, 255, 0.3);
			}
			.dialog-box header span.close:active {
				box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.9)
			}

.global-search {
	width: 100%;
	position: relative;
	outline: 0;
}
	.global-search > input.search-input {
		width: 100%;
		border-radius: 5px;
		border: 0px !important;
		align-self: center;
	}
	.global-search > input.search-input.bottom-border {
		border-radius: 5px 5px 0px 0px;
	}
	.global-search > input.search-input:focus {
		background: #fff !important;
		color: #333;
	}
	.global-search ul {
		margin: 0;
		padding: 5px 0;
		list-style-type: none;
		color: #333;
		background: #fff;
		box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
		position: absolute;
		right: 0;
		left: 0;
		max-height: 400px;
		overflow: auto;
	}
		.global-search ul li {
			outline: 0;
			display: grid;
			transition: background var(--transition-duration), box-shadow var(--transition-duration);
			grid-template-columns: 1fr max-content;
		}
		.global-search ul li:active {
			box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.1);
		}
/* ... */

